2001-10-31  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m.el (w3m-next-buffer): New function.
	(w3m-previous-buffer): Ditto.
	(w3m-lynx-like-map): Bind `C-tab' as the key to call `w3m-next-buffer';
	Bind `C-S-tab' as the key to call `w3m-previous-buffer'.
	(w3m-info-like-map): Ditto.

2001-10-31  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-accept-languages): New option.
	(w3m-dump-head-source-command-argument): Abolished.
	(w3m-dump-head-source-command-arguments): New constant.
	(w3m-w3m-expand-arguments): New macro.
	(w3m-w3m-dump-head-source): To generate command arguments for w3m,
	use `w3m-w3m-expand-arguments' and refer
	`w3m-dump-head-source-command-arguments'.
	(w3m-rendering-half-dump): To generate command arguments for w3m,
	use `w3m-w3m-expand-arguments'.

2001-10-31  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-reload-this-page): Change the semantic of the prefix
	argument to `clear form and post datas'.
	
2001-10-31  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m.el (w3m-pop-up-windows): Changed default value
	(See [emacs-w3m: 01999]).

	* w3m-e21.el (w3m-tab-unselected-face): Changed underline color.
	(w3m-tab-selected-face): Ditto.
	(w3m-tab-background-face): Ditto.
	(w3m-tab-line): Removed needless local variable `len'.

2001-10-30  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m-e21.el (w3m-header-line-location-title-face): Specify background
	color.
	(w3m-header-line-location-title-face): Ditto.
	(w3m-use-tab): New user option.
	(w3m-tab-width): Ditto.
	(w3m-tab-unselected-face): New face.
	(w3m-tab-selected-face): Ditto.
	(w3m-tab-background-face): Ditto.
	(w3m-header-line-map): New variable.
	(w3m-setup-header-line): If w3m-use-tab is non-nil, use header-line
	as a tab area.
	(w3m-insert-header-line): New function.
	(w3m-tab-make-keymap): New function.
	(w3m-tab-line): New function.
	(w3m-fontify-after-hook): Add 'w3m-insert-header-line.

2001-10-30  Hideyuki SHIRAI  <shirai@meadowy.org>
